refinded api pages to ensure consistency of bootstrap layout to avoid shifting of navbar

--- a/style.css
+++ b/style.css
@@ -32,3 +32,7 @@ body {
   color: rgb(0, 0, 0) !important;
   font-weight: bold;
 }
+/* 
+* {
+  border: solid 1px yellow;
+} */
